--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "tty-select",
-  "version": "0.9.0",
+  "version": "0.9.1",
   "description": "Console/terminal async selector",
-  "main": "bin/select.class.js",
+  "main": "bin/select.js",
   "scripts": {
     "build": "rm -rf bin && tsc",
     "test": "node test.js"
